# ministry

./: .gitignore  Cargo.toml  config.json.example
datastax/: delete.sh  insert.sh  search.sh  select.sh  select_all.sh  select_one.sh
src/: cli.rs  datastax.rs  github.rs  main.rs
src/cli/: clap_integration.rs  error.rs  mod.rs  playground.rs
src/cli/subcommands/: mod.rs  playgrounds.rs
src/github/: error.rs  mod.rs  zen.rs
src/log_server/: mod.rs
src/palace/: error.rs  mod.rs
src/palace/assistant/: laboratory_manager.rs  mod.rs  psychologist.rs  secretary.rs  zen_wisdom_assistant.rs
src/palace/covenant/: idea.rs  mod.rs
src/palace/covenant/code_experiment/: book.rs  mod.rs
src/palace/establishment/: mod.rs
src/palace/establishment/developer/: mod.rs
src/palace/establishment/developer/find_experimental_code/: mod.rs
src/palace/establishment/developer/list_code_experiment_names/: mod.rs
src/palace/establishment/developer/list_code_experiments/: mod.rs
src/palace/establishment/developer/read_zen_wisdom/: mod.rs
src/palace/establishment/developer/run_code_experiment/: mod.rs
src/palace/establishment/developer/run_code_experiment/experiment/: book.rs
src/palace/establishment/student/: mod.rs
src/playground/: books.rs
