[package]
name = "ministry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["string"] }
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
